syntax = "proto3";
package my_grpc_proto;
service HelloServer{
// 创建第一个接口
rpc SayHello(HelloRequest)returns(HelloReplay){}
// 创建第二个接口
rpc GetHelloMsg(HelloRequest)returns(HelloMessage){}
}
 message HelloRequest{
   string name = 1 ;
   int32 age = 2;
}
message HelloReplay{
    string message = 1;
} 
message HelloMessage{
   string msg = 1;
}

